# kickstart-autonomy

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md
.claude/skills/verify/: SKILL.md
air/src/spar_air/: CMakeLists.txt  package.xml
air/src/spar_air/behavior_trees/: air_tree.xml
air/src/spar_air/config/: autonomy_blank.yaml
air/src/spar_air/launch/: air.launch.py
air/src/spar_air/src/: anomaly_detector.cpp  bt_executive.cpp  frames.hpp  offboard_link.hpp  tf_from_px4.cpp
air/src/spar_air/src/bt/: anomaly_seen.hpp  battery_low.hpp  blackboard_keys.hpp  idle.hpp  mission_active.hpp  stamped.hpp
air/src/spar_air/src/leaves/: leaves.hpp
docker/: Dockerfile  Dockerfile.air  compose.yaml  entrypoint.sh
docker/air/: pub.csv  sub.csv
docs/: rl.md  sim-architecture.md
ground/src/spar_bringup/: package.xml
ground/src/spar_bringup/config/: autonomy_blank.yaml  localization.yaml  nav2.yaml
ground/src/spar_bringup/launch/: autonomy.launch.py
ground/src/spar_ground/: CMakeLists.txt  package.xml
ground/src/spar_ground/msg/: Detection.msg
ground/src/spar_ground/src/: anomaly_detector.cpp  battery_sim.cpp  bt_executive.cpp
ground/src/spar_ground/src/bt/: anomaly_seen.hpp  battery_low.hpp  blackboard_keys.hpp  idle.hpp  mission_active.hpp  stamped.hpp
ground/src/spar_ground/src/leaves/: navigate_leaf.cpp  navigate_leaf.hpp
ground/src/spar_ground/test/: test_bt_nodes.cpp
scripts/: claim_run_dir.sh  core.sh  ensure_zenoh_router.sh  env.sh  lint_world.py  mission.sh  rasterize_map.py  rviz.sh  smoke_test.sh  smoke_test_air.sh
src/spar/: CMakeLists.txt  package.xml
src/spar/behavior_trees/: main_tree.xml
src/spar/src/: anomaly_detector.cpp  battery_sim.cpp  bt_executive.cpp
src/spar/src/bt/: anomaly_seen.hpp  battery_low.hpp  blackboard_keys.hpp  idle.hpp  mission_active.hpp  stamped.hpp
src/spar/src/leaves/: navigate_leaf.cpp  navigate_leaf.hpp
src/spar/test/: test_bt_nodes.cpp
src/spar_bringup/: CMakeLists.txt  package.xml
src/spar_bringup/launch/: autonomy.launch.py  nav2.launch.py
src/spar_bringup/maps/: blank.pgm  blank.yaml
src/spar_bringup/rviz/: spar.rviz
unity/: .gitignore
unity/SparSim/Assets/Editor/: SparBootstrap.cs  SparX2Build.cs
unity/SparSim/Assets/Materials/: checkpoint_mat.mat  dock_mat.mat  drum_mat.mat  floor_mat.mat  pad_mat.mat  rack_mat.mat  sensor_mat.mat  x2_mat.mat
unity/SparSim/Assets/Prefabs/: Husky.prefab  SkydioX2.prefab
unity/SparSim/Assets/Scenes/: BlankWorld.unity
unity/SparSim/Assets/Scripts/SparRos/: SparCameraSensor.cs  SparDepth.shader  SparPx4Link.cs  SparRos.asmdef  SparRosBridge.cs  SparWheelVisuals.cs
unity/SparSim/ProjectSettings/: ProjectSettings.asset
