<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spar_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch and configuration to bring up the SPAR Husky autonomy stack:
    Nav2 + AMCL, the behavior layer, and the ROS-TCP endpoint the Unity sim
    connects to.
  </description>
  <maintainer email="moosboos1@gmail.com">Ethan Boos</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>spar</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
